testdata/baselines/reference/compiler/tluaNumberKeyIndexDisjoint.types
//// [tests/cases/compiler/tluaNumberKeyIndexDisjoint.tlua] ////

=== tluaNumberKeyIndexDisjoint.tlua ===
// Number and string index signatures are fully independent and may coexist
// with no "number index must be assignable to string index" constraint.
interface Both {
  [k: number]: string;
>k : number

  [k: string]: number;
>k : string
}
declare b: Both;
>b : Both

local n: string = b[1];    // number index → string
>n : string
>b[1] : string
>b : Both
>1 : 1

local s: number = b["x"];  // string index → number
>s : number
>b["x"] : number
>b : Both
>"x" : "x"

// A number index signature serves number-key access.
interface NumOnly {
  [k: number]: boolean;
>k : number
}
local nb: boolean = (({} as NumOnly))[0];
>nb : boolean
>(({} as NumOnly))[0] : boolean
>(({} as NumOnly)) : NumOnly
>({} as NumOnly) : NumOnly
>{} as NumOnly : NumOnly
>{} : {}
>0 : 0

// A string-only index does NOT serve number-key access (disjoint).
interface StrOnly {
  [k: string]: boolean;
>k : string
}
declare so: StrOnly;
>so : StrOnly

local bad = so[0]; // error: number key not covered by string index
>bad : any
>so[0] : any
>so : StrOnly
>0 : 0

local okStr: boolean = so["x"];
>okStr : boolean
>so["x"] : boolean
>so : StrOnly
>"x" : "x"

// Value-type mismatches between the two signatures are independent, not
// forced to agree (TS requires the number value assignable to the string
// value; tlua does not).
interface Mixed {
  [k: number]: string;
>k : number

  [k: string]: boolean;
>k : string
}
declare m: Mixed;
>m : Mixed

local mn: string = m[0];
>mn : string
>m[0] : string
>m : Mixed
>0 : 0

local ms: boolean = m["x"];
>ms : boolean
>m["x"] : boolean
>m : Mixed
>"x" : "x"

local es = {n, s, nb, bad, okStr, mn, ms};
>es : { 1: string; 2: number; 3: boolean; 4: any; 5: boolean; 6: string; 7: boolean; }
>{n, s, nb, bad, okStr, mn, ms} : { 1: string; 2: number; 3: boolean; 4: any; 5: boolean; 6: string; 7: boolean; }
>n : any
>s : any
>nb : any
>bad : any
>okStr : any
>mn : any
>ms : any

